static/css/reproach.css
/* ... */
p, ul, ol, pre, table, blockquote {
  margin-top: 0em;
  margin-bottom: 1.27777778em;
}

.indmicro p {
	margin-bottom: 0em;
}

.indmicro {
	padding: 0.5em;

}
ul ul, ol ol, ul ol, ol ul {
  margin-top: 0em;
  margin-bottom: 0em;
}

/* Let's make sure all's aligned */
hr, .hr {
  border: 1px solid;
  margin: -1px 0;
}
a, b, i, strong, em, small, code {
  line-height: 0;
}
sub, sup {
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
sup {
  top: -0.5em;
}
sub {
  bottom: -0.25em;
}

pre {
	display: block;
    font-family: menlo, monospace;
    white-space: pre;
    margin: 1em 0;
    font-size: 75%;
}

div.meta {
	font-size: 75%;
	font-family: 'Lora', Georgia, serif;
	font-style: italic;
	color: #999;
}

div.floatright {
	display: block;
	float: right;
	width: 10em;
	padding: 1em;
	margin: .5em;
	box-shadow: 5px 5px 10px #367588;
}

div.p-summary {
	font-style: italic;
	color: #367588;

}

#current {
	background-color: rgba(54, 117, 136, 0.1)
}

blockquote {
	margin-top: .5em;
  	margin-bottom: .5em;
  	margin-left: 0;
  	padding-left: 1em;
  	border-left: .5em solid #901717;
}

img.links {
	float: left;
	border: 1px dotted black;
    margin: 0px 10px 0px 0px;
}

div.curr-cont {
	display: -webkit-flex;
    display: flex;
    width: 100%;
    }

div.curr-img {
	height: 100%;
	width: 80px;
}

div.curr-prog {
	width: 100%;
}

div.booklist {
	display: -webkit-flex;
    display: flex;
    width: 100%;
}

div.tbr-entry {
	display: -webkit-flex;
    display: flex;
    width: 100%;
}

div.tbr-img {
	height: 100%;
	width: 80px;
}

div.tbr-item {
	width: 90%;
}

/* -----------------------------------------------------
   CSS Progress Bars
-------------------------------------------------------- */
.cssProgress {
  width: 100%;
  margin-bottom: 20px;
}
.cssProgress .progress1,
.cssProgress .progress2,
.cssProgress .progress3 {
  position: relative;
  overflow: hidden;
  width: 100%;
  font-family: "Libre Franklin", sans-serif;
}
.cssProgress .cssProgress-bar {
  display: block;
  float: left;
  width: 0%;
  height: 100%;
  background: #367588;
  box-shadow: inset 0px -1px 2px rgba(0, 0, 0, 0.1);
  -webkit-transition: width 0.8s ease-in-out;
          transition: width 0.8s ease-in-out;
}
.cssProgress .cssProgress-label {
  position: absolute;
  overflow: hidden;
  left: 0px;
  right: 0px;
  color: whitesmoke;
  font-size: 0.7em;
  text-align: center;
  text-shadow: 2px 2px 3px rgba(54, 117, 136, 1);
}

.progress2 {
  background-color: #EEE;
  box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.2);
}
.progress2 .cssProgress-bar {
  height: 18px;
}
.progress2 .cssProgress-label {
  line-height: 18px;
}

.centre {
	text-align: center;
	padding: 5px;
}

/* SideBar */

#sitetitle a {
	color: #367588;
}

#sitetitle a .ochre {
	color: #901717;
	font-weight: 800;
}

nav li {
	font-family: 'Lora', Georgia, serif;
	font-style: italic;
	color: #999;
}

nav ul {
	padding: 5px;
}
nav a {
	text-decoration: none!important;
	color: #999;
}

nav a:visited {
	color: #999;
}

nav a:hover {
	text-decoration: none!important;
	color: #367588;
}

nav ul {
	list-style: none;
}

nav li {
	font-style: italic;
	color: #999;
}

nav h1 a {
	color: #367588;
}

.footernav {
		text-align: center;
		padding-top: 28px;
		font-size: 32px;
}


/* My tidy links */

article a, article a:visited, .webmention-mention a, .webmention-mention a:visited, .e-content a, .econtent a:visited {
	text-decoration: none;
	color: currentColor;
	background: linear-gradient(whitesmoke,whitesmoke),linear-gradient(whitesmoke,whitesmoke),linear-gradient(#367588,#367588);
	background-size: .05em 1px,.05em 1px,1px 1px;
	background-repeat: no-repeat,no-repeat,repeat-x;
	text-shadow: .03em 0 whitesmoke,-.03em 0 whitesmoke,0 .03em whitesmoke,0 -.03em whitesmoke,.06em 0 whitesmoke,-.06em 0 whitesmoke,.09em 0 whitesmoke,-.09em 0 whitesmoke,.12em 0 whitesmoke,-.12em 0 whitesmoke,.15em 0 whitesmoke,-.15em 0 whitesmoke; 
	background-position: 0 95%,100% 95%,0 95%;
	transition: all 0.3s;
}

article a:hover, article a:active, .webmention-mention a:active, .e-content a:active, .e-content a:hover {
	color: #367588;
	background: linear-gradient(whitesmoke,whitesmoke),linear-gradient(whitesmoke,whitesmoke),linear-gradient(#454552,#454552);
	background-size: .05em 1px,.05em 1px,1px 1px;
	background-repeat: no-repeat,no-repeat,repeat-x;
	text-shadow: .03em 0 whitesmoke,-.03em 0 whitesmoke,0 .03em whitesmoke,0 -.03em whitesmoke,.06em 0 whitesmoke,-.06em 0 whitesmoke,.09em 0 whitesmoke,-.09em 0 whitesmoke,.12em 0 whitesmoke,-.12em 0 whitesmoke,.15em 0 whitesmoke,-.15em 0 whitesmoke; 
	background-position: 0 95%,100% 95%,0 95%;
	transition: all 0.3s;
}

article h3 a, article h3 a:visited, article h3 a:hover {
	line-height: 1.1em;
	background: whitesmoke;
}

p a, p a:visited {
	line-height: inherit;
}

h1 a, h2 a, h3 a, h4 a, h6 a, a.pin-title, dt * a {
	text-decoration: none !important;
	color: #367588;
	border-bottom: none !important;
	-webkit-transition: all 0.5s ease-in;
	-moz-transition: all 0.5s ease-in;
	transition: all 0.5s ease-in;
	text-shadow: #fafafa 2px 0px 3px;
}


h1 a:hover, h3 a:hover, h4 a:hover, h6 a:hover, a.pin-title:hover, dt *a:hover {
	text-decoration: none !important;
	color: #367588;
	border-bottom: 1px solid #367588;
	-webkit-transition: all 0.5s ease-in;
	-moz-transition: all 0.5s ease-in;
	transition: all 0.5s ease-in;
	text-shadow: #fafafa 2px 0px 3px;
}

h1 a:visited, h3 a:visited, h4 a:visited, h6 a:visited, a.pin-title:visited, dt * a:visited {
	text-decoration: none !important;
	color: #367588;
	border-bottom: 1px solid #367588;
	-webkit-transition: all 0.5s ease-in;
	-moz-transition: all 0.5s ease-in;
	transition: all 0.5s ease-in;
	text-shadow: #fafafa 2px 0px 3px;
}
/* ... */

